syntax = "proto3";
package cheetah.matches.factory.admin;
option csharp_namespace = "Cheetah.Matches.Factory.Editor.GRPC";

import public "matches.realtime.shared.proto";
/**
 Общие команды для получения информации и управления сервером
 */
service Configurations {
  /**
  Получить имена полей и шаблонов
 */
  rpc GetItemNames(GetItemsNamesRequest) returns(GetItemsNamesResponse);
}

message GetItemsNamesRequest {

}

message GetItemsNamesResponse {
  repeated TemplateInfo templates = 1;
  repeated FieldInfo fields = 2;
}

message TemplateInfo {
  uint32  id = 1;
  string name = 3 ;
}

message FieldInfo {
  uint32  id = 1;
  cheetah.matches.realtime.shared.FieldType type = 2;
  string name = 3;
}

